--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="searchfield">
         <label for="search">Live search</label>
-        <p>Entern the name or info</p>
-        <input type="search" name="search" id="search" placeholder="name or info">
+        <p>Entern the name or team</p>
+        <input type="search" name="search" id="search" placeholder="name or team">
     </div>
     <div id="update"></div>
 
